--- a/components/sections/main/hero/background-art/BackgroundArt.module.scss
+++ b/components/sections/main/hero/background-art/BackgroundArt.module.scss
@@ -18,6 +18,7 @@
     color: hsl(var(--color-link-primary) / 0.2);
     overflow: hidden;
     text-align: center;
+    opacity:0;
     @include standardWidth;
   }
 
