--- a/components/sections/main/hero/background-art/BackgroundArt.module.scss
+++ b/components/sections/main/hero/background-art/BackgroundArt.module.scss
@@ -41,7 +41,7 @@
       object-fit: contain;
       border-radius: 50% 20% 50% 20%;
       transform: rotate(-9deg);
-      background-color: hsl(var(--color-highlight-active) / 0.75);
+      background-color: hsl(var(--color-link-primary) / 0.75);
       z-index: 2;
     }
   }
